test/compile_errors/binary_schema_invalid_tform.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.BinarySchema(&.{
        .{ .name = "COUNT", .tform = "3G" },
    });
}
